
  * debian/patches/55-add-mimetype.dpatch:
    + Patch from Ubuntu for x-control/* mimetypes in .desktop file.
  * debian/patches/importdialog_missing_icon.dpatch:
    + Show a 'missing icon' image in the import dialog rather than
      throwing an exception when f-spot icon is not found. (Closes: #459261)
  * debian/control:
    + Add line breaks to Build-Depends.

 -- Tim Retout <tim@retout.co.uk>  Sat, 05 Apr 2008 14:58:05 +0100

f-spot (0.4.2-1) unstable; urgency=low

  * New upstream version. (Closes: #470788, #470814, #457030, #459273)
    + Drop patches now included upstream:
      - debian/patches/20_refresh-menus-on-extensions.dpatch
      - debian/patches/detect_and_upgrade_sqlite2_database.dpatch
    + Upstream moved Flickr export to an extension, so:
      - Update debian/patches/forward_port_to_flickrnet_2.1.5.dpatch
      - New patch debian/patches/link_system_flickrnet.dpatch for changes
        to FlickrExport makefiles.
    + Update patches for bitrot:
      - debian/patches/unlink_nunit.dpatch
      - debian/patches/link_system_libs.dpatch
  * Delete unused patches:
    + debian/patches/01_build-system.dpatch
    + debian/patches/10_cs-changes.dpatch
  * New patches:
    + debian/patches/fix_bashisms.dpatch:
      - Ensure f-spot-sqlite-upgrade will run correctly under shells other
        than bash. (Closes: #464652)
    + debian/patches/fix_deleting_1000_photos.dpatch:
      - Fix from upstream SVN for deleting >1000 photos. (Closes: #462798)
    + debian/patches/fix_cms_linkage.dpatch:
      - Fix from upstream stable SVN branch for linking Cms.dll against
        libfspot.
    + debian/patches/fix_v8_db_update.dpatch:
      - Fix from upstream stable SVN branch for updating from v7 to v8 of the
        f-spot photo database.
    + debian/patches/fix_gnome-sharp_typo.dpatch:
      - Fix from upstream SVN for typo in configure.in.
    + debian/patches/gtkhtml-sharp-3.14_port.dpatch:
      - Forward port to gtkhtml-sharp-3.14.