@@ -7,8 +7,9 @@ f-spot (0.4.2-2) unstable; urgency=low
       throwing an exception when f-spot icon is not found. (Closes: #459261)
   * debian/control:
     + Add line breaks to Build-Depends.
+  * debian/update_src_to_use_system_libs.sh: Remove unused script.
 
- -- Tim Retout <tim@retout.co.uk>  Sat, 05 Apr 2008 14:58:05 +0100
+ -- Tim Retout <tim@retout.co.uk>  Sat, 05 Apr 2008 16:04:32 +0100
 
 f-spot (0.4.2-1) unstable; urgency=low
 
